# Project-Template-Manager

./: .gitignore  Cargo.toml  README.md  build.rs
assets/templates/c/: CMakeLists.txt  README.md
assets/templates/c/tools/: build.sh
assets/templates/cpp/: CMakeLists.txt  README.md
assets/templates/cpp/tools/: build.sh
assets/templates/rust/: .gitignore  Cargo.toml  README.md
assets/templates/rust/src/: lib.rs
assets/templates/rust/tools/: build.sh
src/: commands.rs  lib.rs  tools.rs
tools/: build.sh
