[package]
name = "ptm"
version = "0.1.0"
edition = "2018"
build = "build.rs"
description = "CLI Manager for Project Templates"

[[bin]]
name = "ptm"
path = "src/bin/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
zip = "0.6.2"

[build-dependencies]
walkdir = "2.3.2"
zip = "0.6.2"
